--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
